@@ -676,3 +676,5 @@ GO
 
 --  Changeset src/main/liquibase/current/20220623-explicit-api-plan-order.xml::1655976671166-6::msavy (generated)
 ALTER TABLE api_plans ADD order_index INT DEFAULT 0 NOT NULL;
+
+CREATE SEQUENCE hibernate_sequence;
